[package]
name = "inv"
version = "0.1.1"
edition = "2021"

[dependencies]
bevy = { version = "0.8", features = ["dynamic"] }

bevy_rapier2d = "0.16.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bevy_ggrs = { git = "https://github.com/paxsethorld/bevy_ggrs", rev = "bc78d31" }
