[package]
name = "tanks"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = { version = "0.8", features = ["dynamic"] }

bevy_rapier2d = { version = "0.16.0", features = ["enhanced-determinism", "serde-serialize"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bevy_ggrs = { git = "https://github.com/paxsethorld/bevy_ggrs", rev = "bc78d31" }
ggrs = { git = "https://github.com/gschup/ggrs", features = ["sync-send"] }
bytemuck = "1.11.0"
structopt = "0.3.26"
bincode = "1.3.3"
